pa2/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | error ';'
    4           | class_list class ';'
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' feature_list '}'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    8 feature_list: /* empty */
    9             | feature_list feature ';'
   10             | feature_list error ';'

   11 feature: OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID '(' ')' ':' TYPEID '{' expr '}'

   15 formal_list: formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 actual_list: expr
   19            | actual_list ',' expr

   20 expr_list: expr ';'
   21          | error ';'
   22          | expr_list expr ';'
   23          | expr_list error ';'

   24 expr: OBJECTID ASSIGN expr
   25     | expr '.' OBJECTID '(' ')'
   26     | expr '.' OBJECTID '(' actual_list ')'
   27     | expr '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' actual_list ')'
   29     | OBJECTID '(' ')'
   30     | OBJECTID '(' actual_list ')'
   31     | IF expr THEN expr ELSE expr FI
   32     | WHILE expr LOOP expr POOL
   33     | '{' expr_list '}'
   34     | LET OBJECTID ':' TYPEID let_tail
   35     | LET OBJECTID ':' TYPEID ASSIGN expr let_tail
   36     | LET error let_tail
   37     | CASE expr OF case_list ESAC
   38     | NEW TYPEID
   39     | ISVOID expr
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | '~' expr
   45     | expr '<' expr
   46     | expr LE expr
   47     | expr '=' expr
   48     | NOT expr
   49     | '(' expr ')'
   50     | OBJECTID
   51     | INT_CONST
   52     | STR_CONST
   53     | BOOL_CONST

   54 let_tail: IN expr
   55         | IN error
   56         | ',' OBJECTID ':' TYPEID let_tail
   57         | ',' OBJECTID ':' TYPEID ASSIGN expr let_tail
   58         | ',' error let_tail

   59 case: OBJECTID ':' TYPEID DARROW expr

   60 case_list: case ';'
   61          | case_list case ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 14 25 26 27 28 29 30 49
')' (41) 13 14 25 26 27 28 29 30 49
'*' (42) 42
'+' (43) 40
',' (44) 16 19 56 57 58
'-' (45) 41
'.' (46) 25 26 27 28
'/' (47) 43
':' (58) 11 12 13 14 17 34 35 56 57 59
';' (59) 2 3 4 5 9 10 20 21 22 23 60 61
'<' (60) 45
'=' (61) 47
'@' (64) 27 28
'{' (123) 6 7 13 14 33
'}' (125) 6 7 13 14 33
'~' (126) 44
error (256) 3 5 10 21 23 36 55 58
CLASS (258) 6 7
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 54 55
INHERITS (263) 7
LET (264) 34 35 36
LOOP (265) 32
POOL (266) 32
THEN (267) 31
WHILE (268) 32
CASE (269) 37
ESAC (270) 37
OF (271) 37
DARROW (272) 59
NEW (273) 38
ISVOID (274) 39
STR_CONST (275) 52
INT_CONST (276) 51
BOOL_CONST (277) 53
TYPEID (278) 6 7 11 12 13 14 17 27 28 34 35 38 56 57 59
OBJECTID (279) 11 12 13 14 17 24 25 26 27 28 29 30 34 35 50 56 57 59
ASSIGN (280) 12 24 35 57
NOT (281) 48
LE (282) 46
ERROR (283)
LETEXPR (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3 4 5, on right: 1 4 5
class (49)
    on left: 6 7, on right: 2 4
feature_list (50)
    on left: 8 9 10, on right: 6 7 9 10
feature (51)
    on left: 11 12 13 14, on right: 9
formal_list (52)
    on left: 15 16, on right: 13 16
formal (53)
    on left: 17, on right: 15 16
actual_list (54)
    on left: 18 19, on right: 19 26 28 30
expr_list (55)
    on left: 20 21 22 23, on right: 22 23 33
expr (56)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53, on right: 12 13 14 18 19 20
    22 24 25 26 27 28 31 32 35 37 39 40 41 42 43 44 45 46 47 48 49
    54 57 59
let_tail (57)
    on left: 54 55 56 57 58, on right: 34 35 36 56 57 58
case (58)
    on left: 59, on right: 60 61
case_list (59)
    on left: 60 61, on right: 37 61


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    3 class_list: error . ';'

    ';'  shift, and go to state 6


state 2

    6 class: CLASS . TYPEID '{' feature_list '}'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    4 class_list: class_list . class ';'
    5           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    2 class_list: class . ';'

    ';'  shift, and go to state 11


state 6

    3 class_list: error ';' .

    $default  reduce using rule 3 (class_list)


state 7

    6 class: CLASS TYPEID . '{' feature_list '}'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


state 8

    0 $accept: program $end .

    $default  accept


state 9

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 14


state 10

    4 class_list: class_list class . ';'

    ';'  shift, and go to state 15


state 11

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 12

    7 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 16


state 13

    6 class: CLASS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 17


state 14

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


state 15

    4 class_list: class_list class ';' .

    $default  reduce using rule 4 (class_list)


state 16

    7 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 18


state 17

    6 class: CLASS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 21

    feature  go to state 22


state 18

    7 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 23


state 19

   10 feature_list: feature_list error . ';'

    ';'  shift, and go to state 24


state 20

   11 feature: OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 25
    '('  shift, and go to state 26


state 21

    6 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 6 (class)


state 22

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 27


state 23

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'
   10             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 28

    feature  go to state 22


state 24

   10 feature_list: feature_list error ';' .

    $default  reduce using rule 10 (feature_list)


state 25

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 29


state 26

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 30
    ')'       shift, and go to state 31

    formal_list  go to state 32
    formal       go to state 33


state 27

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


state 28

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 7 (class)


state 29

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 11 (feature)


state 30

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


state 31

   14 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 36


state 32

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 33

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 34

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


state 35

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 54


state 36

   14 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


state 37

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 56


state 38

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 30

    formal  go to state 57


state 39

   31 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 58


state 40

   34 expr: LET . OBJECTID ':' TYPEID let_tail
   35     | LET . OBJECTID ':' TYPEID ASSIGN expr let_tail
   36     | LET . error let_tail

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60


state 41

   32 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


state 42

   37 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 62


state 43

   38 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


state 44

   39 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 64


state 45

   52 expr: STR_CONST .

    $default  reduce using rule 52 (expr)


state 46

   51 expr: INT_CONST .

    $default  reduce using rule 51 (expr)


state 47

   53 expr: BOOL_CONST .

    $default  reduce using rule 53 (expr)


state 48

   24 expr: OBJECTID . ASSIGN expr
   29     | OBJECTID . '(' ')'
   30     | OBJECTID . '(' actual_list ')'
   50     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 50 (expr)


state 49

   48 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 67


state 50

   44 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 68


state 51

   33 expr: '{' . expr_list '}'

    error       shift, and go to state 69
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_list  go to state 70
    expr       go to state 71


state 52

   49 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 72


state 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 12 (feature)


state 54

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 55

   14 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 82


state 56

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 83


state 57

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 58

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   31     | IF expr . THEN expr ELSE expr FI
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 59

   36 expr: LET error . let_tail

    IN   shift, and go to state 85
    ','  shift, and go to state 86

    let_tail  go to state 87


state 60

   34 expr: LET OBJECTID . ':' TYPEID let_tail
   35     | LET OBJECTID . ':' TYPEID ASSIGN expr let_tail

    ':'  shift, and go to state 88


state 61

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   32     | WHILE expr . LOOP expr POOL
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 62

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   37     | CASE expr . OF case_list ESAC
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


state 63

   38 expr: NEW TYPEID .

    $default  reduce using rule 38 (expr)


state 64

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   39     | ISVOID expr .
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 39 (expr)


state 65

   24 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 91


state 66

   29 expr: OBJECTID '(' . ')'
   30     | OBJECTID '(' . actual_list ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52
    ')'         shift, and go to state 92

    actual_list  go to state 93
    expr         go to state 94


state 67

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' actual_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' actual_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
   48     | NOT expr .
